* Implemented working solution for Form Sender

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -274,6 +274,11 @@
 										class="materialize-textarea"></textarea>
 									<label for="receiver-for-letter">Empfänger</label>
 								</div>
+								<div class="input-field col s12">
+                                    <input type="email" name="email-for-confirmation" id="email-for-confirmation"
+                                    placeholder="ihre-email@example.com" />
+                                    <label for="email-for-confirmation">Ihre Email für unsere Versandbestätigung (optional)</label>
+                                </div>
 							</div>
 							<div id="payment"></div>
 							<div class="row">
