* Added upload test

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -289,7 +289,7 @@
 									<label for="widerrufsverzicht">Ich verzichte auf mein
 										14 tägiges Widerrufsrecht, akzeptiere die <a href="AGB.pdf"
 										target="_blank">AGB</a> und möchte, dass das Formular
-										schnellstmöglich per Post an den Empfänger zugestell wird.
+										schnellstmöglich per Post an den Empfänger zugestellt wird.
 									</label>
 								</div>
 							</div>
